--- a/nivel-09-css-intermediario/09-display/style.css
+++ b/nivel-09-css-intermediario/09-display/style.css
@@ -11,20 +11,20 @@ ul {
   margin-bottom: 50px;
 }
 
-.bloco li {
+.em-bloco li {
   background: aqua;
   margin-bottom: 10px;
   width: 100px;
 }
 
-.em-linha li {
+/* .em-linha li {
   display: inline;
   background: aqua;
-}
+} */
 
-.em-linha-e-bloco li {
+/* .em-linha-e-bloco li {
   display: inline-block;
   background: aqua;
   width: 100px;
   height: 100px;
-}
+} */
