--- a/nivel-20-react-basico/05-create-react-app/primeiro-app/src/components/card/card.css
+++ b/nivel-20-react-basico/05-create-react-app/primeiro-app/src/components/card/card.css
@@ -2,6 +2,7 @@
     background-color: orangered;
     color: white;
     padding: 20px;
-    width: 100px;
+    width: 200px;
     margin: 10px;
+    text-align: center;
 }
